--- a/2026.01.20.화/0070.Git과 Github/0051.gitea와 계정.원성두.성의진.md
+++ b/2026.01.20.화/0070.Git과 Github/0051.gitea와 계정.원성두.성의진.md
@@ -17,6 +17,13 @@ Docker 컨테이너를 사용하여 Gitea를 실행하면, **컨테이너 내부
 
 ### 2. Binary(바이너리)를 직접 설치하는 경우 (수동 생성 필수)
 
+
+#### 2-0.
+```
+sudo apt update
+sudo install -y sqlite3
+```
+
 리눅스 서버에 Gitea 실행 파일을 직접 내려받아 서비스를 등록(Systemd 등)할 때는 **관리자가 직접 `git` 계정을 생성**해야 합니다.
 
 * **작동 방식:** 보안을 위해 Gitea를 `root` 권한으로 실행하지 않고 전용 계정으로 실행하기 위함입니다.
