Update 0031.Git서버 vs Git Lab.원성두.성의진.md

--- a/2026.01.20.화/0070.Git과 Github/0031.Git서버 vs Git Lab.원성두.성의진.md
+++ b/2026.01.20.화/0070.Git과 Github/0031.Git서버 vs Git Lab.원성두.성의진.md
@@ -37,8 +37,8 @@ sudo apt install -y curl openssh-server ca-certificates tzdata perl
 2. **GitLab 저장소 추가 및 설치**
 ```bash
 curl https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.deb.sh | sudo bash
-# EXTERNAL_URL에 접속할 서버 IP나 도메인을 입력합니다.
-sudo EXTERNAL_URL="http://your-server-ip" apt install gitlab-ce
+# EXTERNAL_URL에 접속할 서버 IP나 도메인을 입력합니다. # 팀장님은 아이피 안 넣고 your-server-ip 그대로 다운 받음 (나중에 ip 고칠 수 있음)
+sudo EXTERNAL_URL="http://your-server-ip" apt install gitlab-ce #우린 유동 아이피라서 바꿔가면서 해야 함 #나는 192.168.10.187 (각자 아이피 넣기)
 
 ```
 
