Refactor git commands explanation in markdown

--- a/2026.01.21.수/0060.앤서블프로젝트실습 /0018.index.php.j2.원성두.성의진.md
+++ b/2026.01.21.수/0060.앤서블프로젝트실습 /0018.index.php.j2.원성두.성의진.md
@@ -59,5 +59,10 @@ $result = $mysqli->query($sql);                     // [Execution] SQL 쿼리를
 2. 깃허브: 의사소통 (규모가 작은 경우 깃허브에서도 프로젝트 운용을 함)
 3. 단순히 명령 하나하나 하는 것 보다 실제로 벌어지는 일들은 실습을 안해봤음
 
-디렉토리 생성 - git init -이름 이메일 넣기 - 키 생성(보통 처음 한번 만들어서 통신이 되면 신경을 안 씀 <-> 우리는 개인.해킹.서버 다 해봐서 복잡했음) - 오리진만 남기기 위해서(버전 관리): git add - commit :버전 하나로 인정 하겠다는 것 (커밋 하지 않는 다는 것은 내가 완성으로 아직 인정하지 않는 것 / 커밋 해야 각 단계에서 백 할 수 있기 때문에) - (push는 깃 허브랑 연결했을 때), git remote 깃 서버가 아니라 깃 이더라도 가져오고 싶을 때 (외부에서 가져오는 것 ): 깃 리모드 이름은 마음대로 지을 수 있지만 origin이라는 이름은 전통적으로 골든이미지를 뜻 함/ 다른 저장소에 연결 할 때는 마음대로 지어도 됨: 실제로 회사에서 다른 부서나 팀꺼 보고 싶을 때 서로 봐야 이해가 갈 때가 있음 : 이럴 때 git remote 하고 이름을 예를 들면 pront / backend로 이름을 짓기 시작함
-=> remote랑 관계를 맺을 때 push 할 것인지 pull할 것인지 생각하기 시작함 - 프로그램을 나눌 수 없을 때 한 파일을 같이 작업을 하는 경우가 있음
+0.디렉토리 생성
+1. git init -이름 이메일 넣기
+2. 키 생성(보통 처음 한번 만들어서 통신이 되면 신경을 안 씀 <-> 우리는 개인.해킹.서버 다 해봐서 복잡했음)
+3.  오리진만 남기기 위해서(버전 관리): git add - commit :버전 하나로 인정 하겠다는 것 (커밋 하지 않는 다는 것은 내가 완성으로 아직 인정하지 않는 것 / 커밋 해야 각 단계에서 백 할 수 있기 때문에)
+4.  (push는 깃 허브랑 연결했을 때), git remote 깃 서버가 아니라 깃 이더라도 가져오고 싶을 때 (외부에서 가져오는 것 ): 깃 리모드 이름은 마음대로 지을 수 있지만 origin이라는 이름은 전통적으로 골든이미지를 뜻 함/ 다른 저장소에 연결 할 때는 마음대로 지어도 됨: 실제로 회사에서 다른 부서나 팀꺼 보고 싶을 때 서로 봐야 이해가 갈 때가 있음 : 이럴 때 git remote 하고 이름을 예를 들면 pront / backend로 이름을 짓기 시작함
+5. remote랑 관계를 맺을 때 push 할 것인지 pull할 것인지 생각하기 시작함
+6.  Complict - 프로그램을 나눌 수 없을 때 한 파일을 같이 작업을 하는 경우가 있음
