--- a/2026.01.21.수/0070.Git과 Github /0021. Git origin.원성두.성의진.md
+++ b/2026.01.21.수/0070.Git과 Github /0021. Git origin.원성두.성의진.md
@@ -26,6 +26,7 @@ Git에서 **`origin`**은 사용자가 복제(clone)해온 **원격 저장소(Re
 
 ---
 
+
 ### 3. origin 활용 워크플로우
 
 일반적으로 로컬 저장소와 원격 저장소(`origin`) 사이에서 데이터는 다음과 같이 흐릅니다.
@@ -36,16 +37,18 @@ git remote -v
 # 결과 예시: origin https://github.com/username/repo.git (fetch)
 
 ```
-
-
+# 전에는 apt update도 없었음 직접 사이트 가서 다운로드 받아야 했음 (어디가면 뭐 받을 수 있는지를 자기가 다 가지고 있고 버전 업데이트 되면 바뀌는 주소를 계속 다시 받는 것)
+# 까먹지 말아야 함 중요 -^0 
 2. **로컬 작업을 원격에 반영 (Push)**
 ```bash
-git pull origin main  # 먼저 origin의 변경사항 반영
+git pull origin main  # 먼저 origin의 변경사항 반영 #complict 방지 내 안에 저장 해 둔 것 다운로드 받는 것 
 git push origin main
 # 로컬의 main 브랜치 내용을 origin(원격)의 main 브랜치로 업로드
-git config pull.rebase true  # 안되면 rebase로 origin을 먼저 수용한후 내 작업 수행하겠음.
+git config pull.rebase true  # 안되면 rebase로 origin을 먼저 수용한후 내 작업 수행하겠음. #rebase:base는 베이스인데 다시 베이스를 잡는다. 풀을 먼저 해두고 푸시하는 것
 
 ```
+git config가 들어오면 설정을 아예 해두는 것-> true 로 해두면 최초 1회만 하면 됨
+push 전에 항상 pull을 하기 -^0
 
 
 3. **원격의 최신 상태를 로컬로 가져오기 (Pull)**
