--- a/2026.01.21.수/0070.Git과 Github /0100.Git 실습1.원성두.성의진.md
+++ b/2026.01.21.수/0070.Git과 Github /0100.Git 실습1.원성두.성의진.md
@@ -59,12 +59,12 @@ git status
 echo "line2" >> README.md
 git status
 git diff
-git diff --staged
+git diff --staged 
 ```
 
 확인 포인트  
 - `git diff`는 “스테이징 안 된 변경”
-- `git diff --staged`는 “스테이징 된 변경”
+- `git diff --staged`는 “스테이징 된 변경” 커밋 해버리면 staged가 없음 (버전 관리가 된 것)
 
 
 C. 커밋 vs 커밋 (History Comparison)
