--- a/2026.01.21.수/0071.Git 배포실습 /0010.git배포2.원성두.성의진.md
+++ b/2026.01.21.수/0071.Git 배포실습 /0010.git배포2.원성두.성의진.md
@@ -8,7 +8,7 @@
 
 * **프로젝트 이름**: `web_dep`
 * **작업 디렉토리 (내 PC)**: `~/projects/web_dep`
-* **대상 서버 (Managed Nodes)**: `192.168.10.101` ~ `192.168.10.110` (총 10대)
+* **대상 서버 (Managed Nodes)**: `192.168.10.101` ~ `192.168.10.110` (총 10대) #우리는 각자 짝꿍만
 * **원격 저장소**: GitHub ([https://github.com/사용자계정/web_dep.git](https://www.google.com/url?sa=E&source=gmail&q=https://github.com/사용자계정/web_dep.git))
 
 ---
