--- a/2026.01.21.수/0071.Git 배포실습 /0010.git배포2.원성두.성의진.md
+++ b/2026.01.21.수/0071.Git 배포실습 /0010.git배포2.원성두.성의진.md
@@ -19,8 +19,8 @@
 
 ```bash
 # 1. 작업 디렉토리 생성 및 이동
-mkdir -p ~/projects/web_dep #자기꺼 넣어야 함
-cd ~/projects/web_dep #자기꺼 넣어야 함
+mkdir -p ~/projects/web_dep #자기꺼 넣어야 함 (1516:KJJ-art랑jinieferry 협업실습하는 수업용 리퍼지토리)
+cd ~/projects/web_dep #자기꺼 넣어야 함 (1516)
 
 # 2. Git 저장소 초기화
 git init
@@ -179,3 +179,72 @@ Next Step: Ansible Vault를 이용한 inventory.ini 암호화 및 변수 관리 
 ---
 
 Next Step: Ansible Vault 변수 암호화 활용하기
+
+
+
+
+-----------------
+### 재정님 버전 inventory.ini만드는 단계부터
+🔁 재정님 서버 기준 (역방향 실습용)
+1️⃣ inventory.ini (재정님 서버에 위치)
+```
+[webservers]
+web-node-1 ansible_host=192.168.10.187
+
+[webservers:vars]
+ansible_user=master
+ansible_ssh_private_key_file=~/.ssh/id_rsa
+```
+
+2️⃣ deploy.yml (교재 동일, URL만 유지)
+
+GitHub 레포는 JinieFerry/1516 그대로
+(재정님은 collaborator → pull 권한 있음)
+
+```
+---
+- name: 1516 자동 배포 플레이북
+  hosts: webservers
+  become: true
+  vars:
+    git_repo_url: "https://github.com/JinieFerry/1516.git"
+    web_root: "/var/www/html"
+
+  tasks:
+    - name: Nginx 웹 서버 설치
+      apt:
+        name: nginx
+        state: present
+        update_cache: yes
+
+    - name: GitHub 저장소에서 최신 소스 코드 배포
+      git:
+        repo: "{{ git_repo_url }}"
+        dest: "{{ web_root }}"
+        version: main
+        force: yes
+
+    - name: Nginx 서비스 활성화 및 시작
+      service:
+        name: nginx
+        state: started
+        enabled: true
+```
+
+3️⃣ 재정님 서버에서 실행
+`ansible-playbook -i inventory.ini deploy.yml`
+
+4️⃣ 너(대상 서버)에서 확인
+`curl http://192.168.10.187`
+
+요약 (한 줄)
+
+소스 주체: 재정님 서버
+
+코드 출처: GitHub JinieFerry/1516
+
+대상 서버: 너 192.168.10.187
+
+교재 흐름/구조: 100% 동일
+
+이걸로 양방향 협업 배포 실습 완성.
