--- a/book/2026.01/01.20.tue/0070.Git과 Github/0050.Gitea GUI 서버 구축하기.md
+++ b/book/2026.01/01.20.tue/0070.Git과 Github/0050.Gitea GUI 서버 구축하기.md
@@ -1,5 +1,7 @@
 https://github.com/putto4u/03.Ansible.IaC.InfraAuto/blob/main/0070.Git%EA%B3%BC%20Github/0050.Gitea%20GUI%20%EC%84%9C%EB%B2%84%20%EA%B5%AC%EC%B6%95%ED%95%98%EA%B8%B0.md
 
+0070.Git과 Github
+/0050.Gitea GUI 서버 구축하기
 ## Gitea를 활용한 웹 기반 Git 서버 구축
 
 `authorized_keys`를 일일이 수정하는 수동 관리의 한계를 느꼈다면, **Gitea**가 최선의 대안입니다. Gitea는 Go 언어로 작성되어 가볍고 빠르며, GitHub와 유사한 사용자 경험을 온프레미스 환경에서 제공합니다.
