--- a/book/2026.01/01.23.fri/03.Ansible.IaC.InfraAuto/0071.로드밸러싱 실습 /010.nginx 로드밸런싱.md
+++ b/book/2026.01/01.23.fri/03.Ansible.IaC.InfraAuto/0071.로드밸러싱 실습 /010.nginx 로드밸런싱.md
@@ -6,6 +6,8 @@ https://github.com/putto4u/03.Ansible.IaC.InfraAuto/blob/main/0071.%EB%A1%9C%EB%
 
 ---
 
+### 0. 그대로 복사해서 붙여넣으면 틀리도록 해두었음 힌트: 이름이 중요함 이름이 같아야 해
+
 ### 1. 프로젝트 개요 및 특장점
 
 로드 밸런싱이 있기 전에는 
@@ -46,6 +48,8 @@ nginx-role-project/
 │       └── templates/
 │           └── lb_nginx.conf.j2  # LB 설정 템플릿
 
+#하나 더 추가 될 것이고, hostvars가 빠져서 만들어줘야 하는 상태 (아래에서 hostvars사용함)
+
 
 
 ```
@@ -60,23 +64,23 @@ nginx-role-project/
 
 
 ---
-# 전역 지능형 핸들러. 자동으로 그룹명과 서비스 명을 결합 restart 해줍니다. 
+# 전역 지능형 핸들러. 자동으로 그룹명과 서비스 명을 결합 restart 해줍니다.  : 좀 더 프로그래밍 감각
 - name: "Universal Service Controller"
   ansible.builtin.service:
-    name: "{{ (group_names | intersect(['web_servers', 'load_balancer'])) | length > 0 | ternary('nginx', 'mysql') }}"
+    name: "{{ (group_names | intersect(['web_servers', 'load_balancer'])) | length > 0 | ternary('nginx', 'mysql') }}" #intersect에 DB서버도 들어가고 늘어날 것
     state: "{{ 'reloaded' if 'web_servers' in group_names else 'restarted' }}"
   listen: "trigger_restart"
 
-# 또는 아래와 같이 작성하여 IaC 의 뜻대로 명시성을 확보할 수도 있습니다.
+# 또는 아래와 같이 작성하여 IaC 의 뜻대로 명시성을 확보할 수도 있습니다. : 읽기 쉽게
 # 각 역할의 이름을 명확히 하되, listen 토픽을 통일하여 어디서든 호출 가능하게 함
 - name: "Restart Web Services"
   ansible.builtin.service:
     name: nginx
     state: reloaded
-  when: "'web_servers' in group_names"
+  when: "'web_servers' in group_names" #지금 root방에 있어서 어디 볼 지를 모르니까 어딜 볼 지 알려주는 것 roles에서 웹서버 뜨면 작동해라
   listen: "trigger_restart"
 
-- name: "Restart LB Services"
+- name: "Restart LB(loadbalancing) Services"
   ansible.builtin.service:
     name: nginx
     state: restarted
@@ -94,7 +98,7 @@ nginx-role-project/
 
 
 
-#### ① 인벤토리 파일 (`inventory.yml`)
+#### ① 인벤토리 파일 (`inventory.yml`) : 웹서버 두 개를 할 꺼고 하나를 로드밸런서로 쓸 것
 
 ```yaml
 all:
@@ -112,27 +116,27 @@ all:
 
 ```
 
-#### ② 메인 플레이북 (`deploy_site.yml`)
+#### ② 메인 플레이북 (`deploy_site.yml`) 사이트를 시작하는게 대부분이라 사이트로 이름 지음 (웹서버에서는 인덱스)
 
 ```yaml
 ---
-# 1. 웹 서버 역할 실행
+# 1. 웹 서버 역할 실행 인벤토리 불러주구
 - name: 백엔드 웹 서버 계층 배포
-  hosts: web_servers
+  hosts: web_servers #webserver
   become: true
   roles:
     - webservers                         
 
-# 2. 로드 밸런서 역할 실행
+# 2. 로드 밸런서 역할 실행 롤스 불러오고
 - name: 전면 로드 밸런서 계층 배포
-  hosts: load_balancer
+  hosts: load_balancer # 인벤토리명이랑 일치해야 함
   become: true
   roles:
-    - loadbalancers                      
+    - loadbalancers    # 디렉토리 명이랑 일치해야 함                    
 
-# 전역 핸들러를 로드하여 모든 역할(Roles)에서 notify 신호를 수신함
+# 전역 핸들러를 로드하여 모든 역할(Roles)에서 notify 신호를 수신함 핸들러는 이렇게 따로 불러야 함 (yml파일로 따로 묶어놔서)
   handlers:
-    - import_tasks: handlers/main.yml
+    - import_tasks: handlers/main.yml #import는 아예 통째로 다 #include는 프로그램 중간 중간에 껴넣을 수 있는 것
 
 ```
 
@@ -148,10 +152,10 @@ all:
 
 - name: 서버별 개별 식별 페이지 생성
   ansible.builtin.copy:
-    content: "<h1>Hello! This is {{ inventory_hostname }}</h1>"
+    content: "<h1>Hello! This is {{ inventory_hostname }}</h1>" #호스트네임에 자기 번호 매겨서 아예 짓기 {{변수}}어디서 불렀지? 따로 지정해줘야 하는지 생각해보세요
     dest: /var/www/html/index.html
     mode: '0644'
-  notify: "trigger_nginx_restart"  # 통합 핸들러 토픽 호출
+  notify: "trigger_nginx_restart"  # 통합 핸들러 토픽 호출 #이름이 같아야 함 에러 날 것
 
 
 ```
@@ -160,7 +164,7 @@ all:
 
 ```yaml
 ---
-- name: Nginx 로드 밸런서 패키지 설치
+- name: Nginx 로드 밸런서 패키지 설치 #엔진엑스 서버가 로드발란서 역할을 할 것
   ansible.builtin.apt:
     name: nginx
     state: present
@@ -168,35 +172,37 @@ all:
 
 - name: 기본 설정 파일 제거
   ansible.builtin.file:
-    path: /etc/nginx/sites-enabled/default
-    state: absent
+    path: /etc/nginx/sites-enabled/default  #sites-aviable 밑에 file로 link/
+    state: absent #부재하게 해라 보통 도메인을 주는 자리에 nginx를 깔면 default가 나 옴 = 그 서비스 안 할거야 난 로드밸런싱 역할 할거야 그러니까 absent부재 해
 
-- name: 로드 밸런싱 설정 템플릿 배포
+- name: 로드 밸런싱 설정 템플릿 배포 #로드 발란싱은 설정파일(jinja2가 만들어 둠)이 필요함
   ansible.builtin.template:
     src: lb_nginx.conf.j2                # 같은 role 폴더 내 templates/에서 찾음
     dest: /etc/nginx/conf.d/load_balancer.conf
     mode: '0644'
-  notify: "trigger_nginx_restart"  # 웹 서버와 동일한 토픽 이름 사용
+  notify: "trigger_nginx_restart"  # 웹 서버와 동일한 토픽 이름 사용 #에러 날 것 뭐랑 일치 해야 하는 지 잘 보세요
 
 
 
 ```
 
-#### ⑤ LB 설정 템플릿 (`roles/loadbalancer/templates/lb_nginx.conf.j2`)
+#### ⑤ LB 설정 템플릿 (`roles/loadbalancer/templates/lb_nginx.conf.j2`) #모든 데몬 보면 컨프 파일이 있음
 
 ```nginx
+# 로드발런싱 할 거니까 웹서버가 업스트림 #우린 두대만 정의했는데 개수 맞춰야 함 에러 날 것
 # 자동화 처리
 upstream my_backend_servers {
-    {% for host in groups['web_servers'] %}
+    {% for host in groups['web_servers'] %}    #{{}}:변수명, {% %}:제어문 for jinja2
     server {{ hostvars[host]['ansible_host'] }}:80 max_fails=3 fail_timeout=30s;
     {% endfor %}
 }
 
+# 자동화 처리 쓸 꺼면 이 아래처럼 작성은 주석처리 해야 함 둘 중 하나만 쓰는 것
 # 자동화 하지 않고 명시적으로 남길 때는 아래처럼 작성합니다. 
 upstream my_backend_servers {
-    # 첫 번째 웹 서버: web-server-01
+    # 첫 번째 웹 서버: web-server-01 #위에서 두대 정의한 거랑 안 맞음 ip도 맞는지 확인해야함
     # max_fails와 fail_timeout을 명시하여 안정성 확보
-    server 192.168.10.11:80 max_fails=3 fail_timeout=30s;
+    server 192.168.10.11:80 max_fails=3 fail_timeout=30s;  #max_fails=3:니가 서비스해~하고 데이터를 줬는데, 응답 줘~ 응답을 안주면 죽었는지 살았는지 3번만 체크하겠다 (응답 안 하면 다른 애한테 줄 거임) , 그리고 30초 안에 응답 안 하면 3번까지 안 물어 봄 #외국은 30초 주는데 한국은 더 짧게 조정함 (잠시 서비스 멈춰놓고 넘어가는지 확인가능)
 
     # 두 번째 웹 서버: web-server-02
     server 192.168.10.12:80 max_fails=3 fail_timeout=30s;
@@ -208,11 +214,12 @@ upstream my_backend_servers {
 
 
 
+
 # 아래 코드는 공통입니다.
 # 로드밸런서 가상 서버 설정
 server {
-    listen 80;
-    server_name localhost;
+    listen 80; 
+    server_name localhost; #nginx 돌릴 때 conf파일에서 썼던 내용들 
 
     location / {
         proxy_pass http://my_backend_servers;
