--- a/book/2026.01/01.23.fri/03.Ansible.IaC.InfraAuto/0071.로드밸러싱 실습 /0101.로드밸런싱 이해.md
+++ b/book/2026.01/01.23.fri/03.Ansible.IaC.InfraAuto/0071.로드밸러싱 실습 /0101.로드밸런싱 이해.md
@@ -64,7 +64,7 @@ server {
 
 ```
 
-## 3. 기능별 액션 및 데이터 흐름 상세
+## 3. 기능별 액션 및 데이터 흐름 상세 <= 개발팀에서 이렇게 분배해주세요 하고 요청을 하는 것 우린 보통 서버구축하고 이건 알아서 해 이 서버가 nginx니까 conf는 너네가 해 
 
 사용자의 액션에 따라 데이터가 흐르는 경로는 다음과 같이 최적화됩니다.
 
@@ -76,13 +76,23 @@ server {
 | **상품 등록** | `/api/product` | `api_servers` | 관리자 권한 확인 후 상품 정보 DB 저장 |
 | **데이터 조회** | `/api/list` | `api_servers` | DB Read 작업을 통해 목록 반환 |
 
+#### 3-2. API란
+초기api는 함수처럼 코드의 일부를 빌려줬음  
+프로그램이 서로 따로 떨어져있을 때 이 기능을 줘봐 했을 때 너 프로그래밍 이름만 대면 그 프로그램에서 요구하는 인자,함수값만 넣어주면 너가 실행해~하는 것  
+별개의 프로그램 끼리 기능을 주고 받을 때
+-> 이 역할을 하는 게 왓스 서버가 어떤 api인지를 알고 로그인이면 로그인 api를 부르고, 아이디랑 비번을 뿌려줌
+=> api가 왓스 서버라고 표현을 하는 곳도 있고 아니라고 하는 곳도 있음 특히 왓스 서버에서 많이 씀    
+=> 쿠보네티스, 왓스서버는 api 서버가 다 접수를 받음    
+: 여기서는 api가 왓스서버임 (API가 더 큰 개념임)
+
+
 ## 4. 로드밸런싱 알고리즘의 선택
 
 서버 그룹 내에서 요청을 분배할 때 사용하는 대표적인 알고리즘입니다.
 
 * **Round Robin (기본):** 서버 순서대로 하나씩 요청을 할당합니다.
 * **Least Connections:** 현재 연결된 접속자 수가 가장 적은 서버로 보냅니다. (유료 서비스나 복잡한 로직 처리에 유리)
-* **IP Hash:** 클라이언트의 IP 주소를 기반으로 특정 서버에만 연결합니다. (세션 유지가 필요한 경우 사용)
+* **IP Hash:** 클라이언트의 IP 주소를 기반으로 특정 서버에만 연결합니다. (세션 유지가 필요한 경우 사용) # 중국애들은 따로 받으라고 할 때 (트래픽이 너무 많음) 공격 들어왔을 때 이런식으로 함 성능이 좋은 곳으로 IP를 고정시켜 버림
 
 ---
 
