--- a/book/2026.01/01.23.fri/.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습 /0010.앤서블프로젝트실습.md
+++ b/book/2026.01/01.23.fri/.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습 /0010.앤서블프로젝트실습.md
@@ -17,12 +17,12 @@ https://github.com/putto4u/03.Ansible.IaC.InfraAuto/blob/main/0060.%EC%95%A4%EC%
 
 앤서블이 규칙을 만들었음
 ```text
-ansible-project/
+ansible-project/ # 이 프로젝트의 홈디렉토리
 ├── group_vars/
 │   └── all/
-│       └── vault.yml        # [보안] 암호화된 비밀번호 저장소
+│       └── vault.yml        # [보안] 암호화된 비밀번호 저장소 #디렉토리 아니고 파일
 ├── roles/
-│   ├── common/              # [Role] 패키지 캐시 업데이트 및 기본 유틸
+│   ├── common/              # [Role] 패키지 캐시 업데이트 및 기본 유틸 #roles 디렉토리 /밑으로 tasks있음
 │   ├── mariadb/             # [Role] DB 설치, 로컬 보안 설정, 데이터 주입
 │   ├── nginx/               # [Role] 웹서버 설치, 8080 포트 개방, PHP 연동
 │   └── webapp/              # [Role] PHP 소스 배포 (DB 연동 페이지)
@@ -39,7 +39,7 @@ ansible-project/
 수동 생성을 방지하기 위한 스캐폴딩(Scaffolding) 플레이북입니다.
 
 **`setup.yml`**
-#yaml은 어느 호스트의 어느 tasks를 하는 것인지
+#yaml은 어느 호스트의 어느 tasks를 하는 것인지 항상 주석을 써놔야 함 회사에서도 시킴
 #tasks가 많아지면role로 묶음
 ```yaml
 # 실행: ansible-playbook setup.yml
@@ -49,11 +49,11 @@ ansible-project/
   gather_facts: no
   tasks:
     - name: 롤(Role) 및 변수 디렉토리 생성
-      file:
-        path: "{{ item }}"
-        state: directory
-      loop:
-        - group_vars/all
+      file: # 디렉토리 관련 된 거야~
+        path: "{{ item }}" #path는 경로 item은 내부적으로 쓰는 예약어=어디서 선언하지 않음 보통 loop 불러올 때 많이 씀
+        state: directory # state:상태 = 할 려고 하는 작업이 유지되어야 하는 상태 "니가 하는 작업이 이런 상태로 있어야 해~" 이게 우리 목표야!
+      loop: #파이썬은 직관적으로 만들기 때문에 파일 미리 지정하고 있지않다가, 데이터 입력하면 지정함
+        - group_vars/all 
         - roles/common/tasks
         - roles/mariadb/tasks
         - roles/mariadb/templates
@@ -63,9 +63,9 @@ ansible-project/
         - roles/webapp/templates
 
     - name: 빈 파일 생성 (이후 내용을 채워넣음)
-      file:
+      file: #모듈
         path: "{{ item }}"
-        state: touch
+        state: touch #처음 만들어둔 상태
       loop:
         - inventory.ini
         - site.yml
@@ -73,7 +73,7 @@ ansible-project/
         - roles/common/tasks/main.yml
         - roles/mariadb/tasks/main.yml
         - roles/nginx/tasks/main.yml
-        - roles/nginx/templates/default.j2
+        - roles/nginx/templates/default.j2 #jinja2언어(좀 이상함)
         - roles/webapp/tasks/main.yml
         - roles/webapp/templates/index.php.j2
 
