--- a/book/2026.01/01.21.wed/03.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습/0010.앤서블프로젝트실습.md
+++ b/book/2026.01/01.21.wed/03.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습/0010.앤서블프로젝트실습.md
@@ -43,8 +43,8 @@ ansible-project/
 # 실행: ansible-playbook setup.yml
 - name: 프로젝트 기초 구조 생성
   hosts: localhost
-  connection: local
-  gather_facts: no
+  connection: local #connection:연결 리모트 컨트롤 하려고 만든게 앤서블 로컬이니까 ssh필요 없음
+  gather_facts: no #gather:모은다 facts:host name을 가져와라  상대방을 디폴트로 ssh로 정했음 자기한테 할 때는 
   tasks:
     - name: 롤(Role) 및 변수 디렉토리 생성
       file:
