--- a/book/2026.01/01.21.wed/03.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습/0010.앤서블프로젝트실습.md
+++ b/book/2026.01/01.21.wed/03.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습/0010.앤서블프로젝트실습.md
@@ -89,14 +89,14 @@ ansible-playbook setup.yml
 ### 3. [Step 1] 비밀번호 암호화 (Ansible Vault)
 
 보안을 위해 비밀번호는 평문으로 저장하지 않습니다.
-
+파일 만들고 시작 위에서 이미 만들었음
 1. **Vault 파일 :** `ansible-vault encrypt group_vars/all/vault.yml`
 2. `ansible-vault edit group_vars/all/vault.yml`
 3. **내용 입력:**
 
 ```yaml
 # DB 루트(Superuser) 비밀번호
-db_root_password: "StrongRootPassword!@#"
+db_root_password: "StrongRootPassword!@#" #복호화가 되면 해시가 아님
 
 # 로컬 관리자(Admin) 비밀번호
 db_admin_password: "StrongAdminPassword!@#"
