--- a/book/2026.01/01.21.wed/03.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습/0010.앤서블프로젝트실습.md
+++ b/book/2026.01/01.21.wed/03.Ansible.IaC.InfraAuto/0060.앤서블프로젝트실습/0010.앤서블프로젝트실습.md
@@ -142,65 +142,70 @@ db_web_password: "StrongWebPassword!@#"
 - name: 로컬 접속만 허용 (bind-address = 127.0.0.1)
   lineinfile:
     path: /etc/mysql/mariadb.conf.d/50-server.cnf
-    regexp: '^bind-address'
+    regexp: '^bind-address' #정규표현식
     line: 'bind-address = 127.0.0.1'
   notify: restart mariadb
+                                                                            #노티파이 나오면 handlers해야함 다섯번이면 다 다섯번 핸들러스 작동해도 노티파이는 마지막 한번 만 함 테스크가 다 끝나면 딱 한번 실행함(해당사항이 있을 때만)
+                                                                            #restart는 데몬 자체를 다시 시작하는 거 한참 데몬 올라 옴
+                                                                            #reload는 환경 변수 바뀐 부분만 적용 (안 끔)
 
 - name: MariaDB 서비스 시작 및 활성화
   service:
     name: mariadb
-    state: started
-    enabled: yes
+    state: started          #스타트 유지해라
+    enabled: yes            #껐다 켰을 때 자동으로 작동해라
 
 - name: 백업 디렉토리 생성
+  # 파일 모듈에는 touch mkdir등 파일 관련 된 모듈 다 들어있음
   file:
     path: /var/lib/mysql/backup
     state: directory
-    owner: mysql
-    group: mysql
-    mode: '0755'
+    owner: mysql   #chowner
+    group: mysql   #mkgroup
+    mode: '0755'   #chmod작동 #특수파일 일 때만 4번째 자리 채우고, 테라폼이 4자리 수 쓰기 때문에 안쓰고 0으로 채워두고, 숫자가 아니라고 ''작따 쳐둠
 
 - name: 로컬의 employees.sql 파일 서버로 복사
-  copy:
-    src: ~/dbbackup/employees.sql # 앤서블 실행 PC의 경로
-    dest: /var/lib/mysql/backup/employees.sql
-    owner: mysql
-    group: mysql
+  copy:  #카피라는 모듈을 가져올 것
+    src: ~/dbbackup/ # 앤서블 실행 PC의 경로 source의 약자 dbbackup전체를 옮겨야 함
+    dest: /var/lib/mysql/backup/.
+    owner: mysql #mkowner
+    group: mysql #mkgroup
 
-# become: yes가 없으면 Root 권한이 없어 DB Import가 실패합니다.
+# become: yes가 없으면 Root 권한이 없어 DB Import가 실패.
 - name: 데이터베이스 주입 (Import)
-  community.mysql.mysql_db:
-    name: employees
-    state: import
+  community.mysql.mysql_db:    #데이터 주입
+    name: employees            #이름
+    state: import              #DB에서 쓰는 명령어(^)
     target: /var/lib/mysql/backup/employees.sql
     login_unix_socket: /var/run/mysqld/mysqld.sock
+  become: yes
 
 
 # [보안] 관리자도 오직 로컬(터미널)에서만 접속 가능
 - name: 로컬 관리자(Admin) 계정 생성
   community.mysql.mysql_user:
     name: dbadmin
-    password: "{{ db_admin_password }}"
-    priv: '*.*:ALL,GRANT' # 모든 권한 부여
+    password: "{{ db_admin_password }}" #vault에서 이미 암호화 된 것을 가져와서 다른 사람이 보지 못 하게
+    priv: '*.*:ALL,GRANT' # 모든 권한 부여 # 모든 테이블 , select권한을 주겠다 all은 모든 sql명령문을 쓸 수 있다 GRANT:허락한다
     host: 'localhost'      # [중요] 외부 접속 불가, 로컬 전용
     state: present
-    login_unix_socket: /var/run/mysqld/mysqld.sock
+    login_unix_socket: /var/run/mysqld/mysqld.sock  #임폴트할 때 쓰는 명령어
 
 # [보안] 웹앱은 로컬호스트를 통해 DB 접속
 - name: 웹(Web) 계정 생성
   community.mysql.mysql_user:
     name: webuser
     password: "{{ db_web_password }}"
-    priv: 'employees.*:SELECT' # employees DB만 조회 가능 (최소 권한)
+    priv: 'employees.*:SELECT' # employees DB만 조회 가능 (최소 권한)  #테이블 컬럼 권한 순서 : 이번에는 select 권한만 줌 
     host: 'localhost'
     state: present
-    login_unix_socket: /var/run/mysqld/mysqld.sock
-
-handlers:
-  - name: restart mariadb
-    service:
-      name: mariadb
-      state: restarted
+    login_unix_socket: /var/run/mysqld/mysqld.sock   #계정 만들 때 쓰는 명령어
+#tasks라서 못 넣음 주석처리 해야 에러 안 남 -> tasks 밖에서 써야 함 
+#handlers: #이미 디렉토리에서 handlers 디렉토리 만들었으니까 hanlders파일 안에는 -name부터 시작
+#  - name: restart mariadb
+#    service:
+#      name: mariadb
+#      state: restarted
 
 ```
 
@@ -216,18 +221,18 @@ handlers:
     name: nginx
     state: present
 
-# AWS가 아니므로 OS 방화벽(UFW)에서 포트를 열어야 합니다.
+# AWS가 아니므로 OS 방화벽(UFW)에서 포트를 열어야 합니다. 웹서버라서 (특)
 - name: 방화벽(UFW) - 8080 포트 외부 접속 허용
   community.general.ufw:
-    rule: allow
-    port: '8080'
-    proto: tcp
-
+    rule: allow                    #파이어 월은 들어가는 인자(파라미터,argument라고도 함) 주는 게 argument,실제 값 쓰면 파라미터
+    port: '8080'                   #소프트웨어는 모든지 포트로 감 80아닌 다른 포트번호로 쓸 때는 포트 번호를 써야 함 
+    proto: tcp                       
 - name: Nginx 설정 파일 배포
+  #템플릿으로 conf파일 
   template:
-    src: default.j2
-    dest: /etc/nginx/sites-available/default
-  notify: restart nginx
+    src: default.j2 
+    dest: /etc/nginx/sites-available/default                # webserver enable로 link 를 해줘야 진짜 서비스가 되는 것 (업데이트 에러?백 할 때 링크 끊으면 됨 그때 디폴트 아니고 백업 도메인 씀)
+  notify: restart nginx                                     # default 안쓰고 jinie.com같은 거로 함 (디폴트 아닌 경우에는 웹서버가 무슨 서비스 할 지 모름 enable에 등록필) 수정식 사고나면 백하려고 2번 하게 만듦 (colab / gmail등 google.com에서도 여러 서비스를 하거나, 호스팅 사이트 같은 경우 여러개 도메인 서비스 가능)
 
 handlers:
   - name: restart nginx
