--- a/book/2026.01/01.26.mon/04.PrivateCloudInfra /040.niginx 구축 등록 재확인.md
+++ b/book/2026.01/01.26.mon/04.PrivateCloudInfra /040.niginx 구축 등록 재확인.md
@@ -4,7 +4,7 @@
 
 ### 1. 도커 이미지 생성 및 빌드
 
-먼저 간단한 웹 서버 역할을 할 `index.html`과 이를 이미지로 만들 `Dockerfile`을 작성합니다.
+먼저 간단한 웹 서버 역할을 할 `index.html`과 이를 이미지로 만들 `Dockerfile`을 작성합니다.     
 
 ```bash
 # 1. 실습 디렉토리 생성 및 이동
@@ -20,12 +20,12 @@ FROM nginx:latest
 COPY index.html /usr/share/nginx/html/index.html
 EOF
 
-# 4. 이미지 빌드 (-t는 태그/이름 설정)
+# 4. 이미지 빌드 (-t는 태그/이름 설정) 컴퓨터가 알아듣는 바이너리 언어로 바꿔주기(빌드)
 docker build -t my-web-app:v1 .
 
 ```
 
-### 2. 이미지 확인 및 상태 해설
+### 2. 이미지 확인 및 상태 해설 : 워드로 친 작업 이미지 만들기(컴퓨터가 알아 듣게)
 
 생성된 이미지를 확인하고 출력되는 정보의 의미를 파악합니다.
 
@@ -41,7 +41,7 @@ docker images
 * **CREATED**: 이미지가 생성된 시점.
 * **SIZE**: 이미지가 차지하는 용량.
 
-### 3. 포트 포워딩을 이용한 컨테이너 실행
+### 3. 포트 포워딩을 이용한 컨테이너 실행(위 까지는 이제 저장 된 것, 실행시켜야 함)
 
 컨테이너의 포트를 호스트(우분투)의 포트와 연결하여 외부 접속을 허용합니다.
 
@@ -70,7 +70,7 @@ curl localhost:8080
 
 ```bash
 # docker tag [기존이미지:태그] [새이름:태그]
-docker tag my-web-app:v1 [본인_도커허브_ID]/my-web-app:v1
+docker tag my-web-app:v1 [본인_도커허브_ID]/my-web-app:v1 #이미지 이름 지었어도 이미지는 여러 사람이 가져가는 거니까 이름을 또 지어주는 것
 
 # 바뀐 이름 확인
 docker images | grep my-web-app
