--- a/book/2026.01/01.26.mon/04.PrivateCloudInfra/01.도커및쿠버네티스설치 /012.k8s설치하기.md
+++ b/book/2026.01/01.26.mon/04.PrivateCloudInfra/01.도커및쿠버네티스설치 /012.k8s설치하기.md
@@ -65,11 +65,11 @@ sudo sysctl --system
 # 1. Docker 저장소 등록을 위한 필수 패키지 설치
 sudo apt install -y ca-certificates curl gnupg lsb-release #10도커설치에서 했으니까 생략
 
-# 2. Docker 공식 GPG 키 추가
+# 2. Docker 공식 GPG 키 추가  #이건 중복 하면 안 됨
 sudo mkdir -p /etc/apt/keyrings 
 curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg 
 
-# 3. Docker 저장소 추가
+# 3. Docker 저장소 추가 #이건 중복하면 안 됨
 echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
 # 4. containerd 설치
@@ -85,7 +85,7 @@ sudo systemctl restart containerd
 
 ```
 
-### 3. 쿠버네티스 구성 요소 설치
+### 3. 쿠버네티스 구성 요소 설치 꼭 해야 함
 
 클러스터 구축을 위한 핵심 도구 3인방(`kubeadm`, `kubelet`, `kubectl`)을 설치합니다. 큐브라고 부름 큐브어드민, 큐블렛,큐브컨트롤
 
