--- a/book/2026.01/01.27.tue/0402.도커 실습.md
+++ b/book/2026.01/01.27.tue/0402.도커 실습.md
@@ -19,7 +19,7 @@ $ docker volume create webdata
 webdata
 $ docker volume inspect webdata
 
-docker volume prune
+$ docker volume prune
 
 #Are you sure you want to continue? [y/N]
 y
@@ -49,7 +49,7 @@ $ curl http://localhost:8080
 if you can not run the container check you logs
 `$ docker logs -f web`
 
-##볼륨으로 HTML콘텐츠 마운트
+##볼륨으로 HTML콘텐츠 마운트: 볼륨을 html에 붙여야 영구적으로 수정이 반영 됨
 
 ```
 #1) docker볼륨 생성:데이터 영구저장 볼륨 'webdata(이름)'생성
@@ -64,7 +64,8 @@ $ docker run -d --name web -p 8080:80 \
 nginx:1.29-alpine
 
 #3) 연결 상태 확인
-
+$ docker exec web ls -l /usr/share/nginx/html
+$ curl http://localhost:8080
 ```
 #### 2)더 명시적 방법:--mount (권장)
 -v옵션: 간편 , --mount: 명확,유연
@@ -88,7 +89,7 @@ type=volume,source=webdata,target=/usr/share/nginx/htnl \
 $ kubectl get nodes
 
 #워커로드가 있을 때 실용중인 경우를 대비해서 스케줄링 막는 것
-$ kubectl cordon vmmaster01 #(마스터노드네임)
+$ kubectl cordon master01 #(마스터노드네임)
 
 #데몬 죽이기
 $ sudo systemctl stop kubelet
