--- a/book/2026.01/01.27.tue/0402.도커 실습.md
+++ b/book/2026.01/01.27.tue/0402.도커 실습.md
@@ -187,3 +187,50 @@ $ docker exec -it web /bin/shell #web 뒤에 깔 거 들어옴 만든 사람 마
 $ docker run -d --name web -p 8080:80 nginx:1.29-alpine
 ```
 
+####다시 연결
+```
+#master01/usr/share/nginx/html
+#끄기
+$ docker rm -f web
+#webdata있으면 안만듦
+ls 
+$ docker volume create fileserver
+
+$ docker volume ls
+
+$ docker run -d --name web -p 8080:80
+-v fileserver:/usr/share/nginx/html nginx:1.29-alpine #여기 위치 중요
+#영어숫자 섞인 한 줄 로그 나옴
+```
+
+### 다시 웹 사이트에 표시 될 내용 수정:vm을 건들인거지 컨테이너 들어가야 함
+```
+#수정 안 먹는 버전
+#/html
+$ vi index.html
+$ sudo vi index.html #웹서버는 바로 적용됨
+```
+
+```
+#컨테이너 들어가서 수정 먹는 버전
+$ docerk exec -it web /bin/sh
+# pwd
+# cd /usr/share/nginx/html
+# ls
+# vi index.html
+# 웹서버에 표시 될 내용 적용하고 wq!(저장하고 나오기)는 바로 적용 됨
+# exit
+```
+
+도커 내리기:서비스 내림 : 웹페이지 찾을 수 없음 나옴
+```
+$ docker rm -f web
+```
+
+다시 서비스 붙이기 : 수정한 페이지 나옴 (위에서 html에 볼륨 붙여서 수정했으니까)
+```
+$ docker run -d --name web -p 8080:80 \
+-v wbedata:/usr/share/nginx/html \
+nginxL1.29-alpine
+```
+
