--- a/book/2026.01/01.27.tue/0402.도커 실습.md
+++ b/book/2026.01/01.27.tue/0402.도커 실습.md
@@ -1,5 +1,8 @@
 2026-01-27-화 실습
-# 실습 1 004.엔진x영구저장소 
+
+#004.엔진x영구저장소 
+
+## 실습 1 : 볼륨 연결 안 하면 수정 사항 적용 안되는 것
 https://drive.google.com/drive/folders/1o6K1IQ5JQ4u9BdyBfRNINgwZgjVqCJc_
 <img width="1920" height="1080" alt="image" src="https://github.com/user-attachments/assets/06b38f58-1b4a-43f7-abf7-d512e34b64e7" />
 
@@ -237,7 +240,33 @@ nginxL1.29-alpine
 ---------------
 ---------------
 
-# 실습2 정적 웹사이트 호스팅
+## 실습2 정적 웹사이트 호스팅
 ```
+# 1 설정 파일 추출 및 수정
+$ docker rm -f web
 
+# 2 # 볼륨까지 붙이고 readonly 한 거니까 수정하면 안 됨
+$ docker run -d --name wbe2 -p 8080:80 \
+-v webdata://usr/share/ngninx/html nginx:1.20-alpine
+
+
+#주의:Dockerfile이나 CMD를 직접 재정의하여 Nginx를 실행할 때는 반드시 포어그라운드 실행 옵션 필요
+#=이미지 다운 받고 바로 실행하면 상관없는데, 도커파일로 재정의하면 꼭 포어그라운드 안그럼 백그라운드(반짝 서비스하고 종료 됨)
+#db서버는 밑에서 작업해서 안보임 -d 백그라운드에서 작업하라고 했으니까<-웹서버는 보여야함:포어그라운드
+#daemon off:데몬은 숨어서 리슨만 한다(메모리는 수확 영역에 있다가 필요한 연산이 있을 때만 올려서 함) : 숨어있는게 daemon의 기본 성질
+#웹서버만! daemon on:숨어있지 않을게= 포어그라운드 할게
+
+# 데이터 유지 확인
+$ curl http://localhost:8080
+#Output: <h1>웹서버에 띄울 내용 예시:Jello~+WebSerever</h1>
+
+#도커 정의보기
+$ docker inspect webdata
 ```
+## 요약 및 참고 자료
+바인드는 왜 꼭 묶어 둠?
+
+참고 자료에 들어가면 도커에 대해 자세히 나옴
+
+docker안 쓰더라도 dockerhub는 사용함: 이미지가 많아서 + 워낙 오래 서비스 해서
+
