--- a/book/2026.01/01.27.tue/0402.도커/005.파일서버영구저장소.md
+++ b/book/2026.01/01.27.tue/0402.도커/005.파일서버영구저장소.md
@@ -4,8 +4,10 @@ https://drive.google.com/drive/folders/1o6K1IQ5JQ4u9BdyBfRNINgwZgjVqCJc_
 
 >_ 파일 서버 실해 run file server #볼륨에 파일 올리면 사라지는지 확인
 파일 브라우저 (프로그램) 가장 많이 쓰임 
-# 포트 8080 말고 다른 거로 실습하기 + 도커파일로 직접 iac 만들어서 파일도 올려보기 + 코드 충돌나지 않게 바꾸기 + 디렉토리 만들어두고 조정하기 + 에러나지 않게 권한 주기
-# 이미지 다운받아서 하는 건 IaC아님 : 명세서가 없으니까
+
+### 포트 8080 말고 다른 거로 실습하기 + 도커파일로 직접 iac 만들어서 파일도 올려보기 + 코드 충돌나지 않게 바꾸기 + 디렉토리 만들어두고 조정하기 + 에러나지 않게 권한 주기
+
+### 이미지 다운받아서 하는 건 IaC아님 : 명세서가 없으니까
 
 ## 실습1
 #### DOCKER시스템 아키텍처
