--- a/book/2026.01/01.27.tue/0402.도커/005.파일서버영구저장소.md
+++ b/book/2026.01/01.27.tue/0402.도커/005.파일서버영구저장소.md
@@ -67,7 +67,7 @@ $ docker exec file-server filebrowser users add admin 'Pass1234'--perm.admin
 #Output: User admin created successfully
 
 #### 데이터 영속성 테스트
-```
+
 # 테스트 파일 생성 및 확인
 $ docker exec file-server sh -lc 'echo persisted > /srv/persist.txt && ls -l /srv'
 
@@ -80,3 +80,64 @@ $ docker run -d --name file-server -p 8080:80 -v my-data:/srv filebrowser/filebr
 # 데이터 생존 확인
 $ docker exec file-server cat /srv/persist.txt
 ```
+
+admin 비밀번호 이제 매번 새로운 랜덤 패스워드 생성으로 정책 바뀜
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/c92c4c3b-df61-46d5-a80d-dbc91d90075a" />
+왜 로그인 안 되냐면 (정확한 원인)
+
+컨테이너를 재생성했는데 /config·/database를 볼륨으로 안 묶으면  admin 비밀번호가 매번 새로 랜덤 생성 됨   
+
+로그확인
+```
+Performing quick setup
+User 'admin' initialized with randomly generated password: HhLykgUOcQh73WJ0
+```
+
+
+
+지금 실행 중인 컨테이너의 비밀번호는 로그에 찍힌 최신 값 만 유효함
+
+-> 그러면 UI에서 “사용자 이름 또는 비밀번호를 확인하십시오”가 뜸
+
+
+1. 현재 컨테이너의 최신 비밀번호 다시 확인
+`docker logs --tail 50 file-server | grep password`
+
+
+나오는 값 그대로 복사해서 로그인:
+
+ID: admin
+
+PW: (방금 로그에 나온 값)
+
+
+
+2. 비밀번호를 매번 확인하지 않으려면 설정/DB도 볼륨으로 고정해야 함
+
+지금은 /srv만 영구화했고, 비밀번호가 저장되는 /config, /database는 휘발이라 매번 초기화됨. (정책이 그럼)
+```
+# 1)  볼륨 2개 추가
+docker volume create fb-config
+docker volume create fb-db
+
+# 2) 컨테이너 다시 실행 (정석방식)
+docker rm -f file-server
+
+docker run -d --name file-server \
+  -p 8081:80 \
+  -v my-data:/srv \
+  -v fb-config:/config \
+  -v fb-db:/database \
+  --restart unless-stopped \
+  filebrowser/filebrowser:latest
+
+# 3) 한 번만 로그로 비번 확인
+docker logs --tail 20 file-server
+
+
+ 이제부터는 컨테이너를 지웠다 다시 띄워도 비밀번호 안 바뀜
+```
+
+> 데이터만 볼륨으로 묶으면 파일만 영구화되고,
+> 설정/계정까지 영구화하려면 config·database도 볼륨으로 분리해야 한다.
+
