--- a/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /005.도커컴포즈 이해와 실습.md
+++ b/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /005.도커컴포즈 이해와 실습.md
@@ -60,6 +60,7 @@ networks:
 ```
 
 > **실습 명령어:** `docker-compose up -d` (백그라운드 실행)
+> docker file 과 마찬가지로 이름이 디폴트로 주어지지만, 여러개 생성할 때는 따로 만들 수 있음 $ docker-compose -f docker-compose.prod.yml up -d
 > **확인 방법:** `curl http://localhost` 접속 및 `docker exec frontend ping 172.20.0.20`으로 통신 확인
 
 ---
