--- a/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /020.플라스크+DB+SQL.md
+++ b/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /020.플라스크+DB+SQL.md
@@ -11,6 +11,40 @@ https://github.com/putto4u/04.PrivateCloudInfra/blob/main/08.%EB%8F%84%EC%BB%A4%
 
 이 프로젝트는 사용자 정의 Flask 이미지와 공식 MySQL 이미지를 조합합니다. `employees.sql` 데이터를 DB 컨테이너 생성 시 자동으로 주입하며, Flask 서버는 이를 쿼리하여 웹 화면에 부서 정보를 출력합니다.
 
+#### 많이 쓰는 명령어
+```
+#mysql찾기
+#root부터 찾는 거 아니면 .을 침 : 이 이하 위치부터 찾아라
+#뭘 찾을 지 옵션: 이름을 알면 -name 뒤에 전체이름 혹은 아는데까지하고 *
+$ find . -name employees.sql
+
+#시스템에서 자주 쓰는 명령어
+#1기가 이상 용량의 파일이 있는가 찾기: 와일드 카드로 많이 씀
+#주로 덤프 파일이 10매가 넘음
+$ find . -type f  -size +1000M
+
+#빈파일 찾기
+$ find . -empty
+
+#로그는 계속 모디파이 되기 때문에 +30으로 찾으면 그건 30일 이상 서비스 안했다는 뜻
+#modified 최근 수정된 적 있는 파일들 찾기:트리거로 삼을 때 변조됐나 안됐나 모디파이도 할 수 있음
+#7일 이내에 수정된 파일 찾기
+$ find . -mtime -7
+
+#파일이름이 대충은 기억나는데 대소문자 헷갈릴 때 있음
+#대소문자 상관없이 찾기
+#ignore case
+$ find . -iname "대소문자 상관없이 생각나는 이름"
+```
+
+찾아보자!
+트리구조에 생략했지만 db밑에 employees 덤프파일이 통째로 있어야 함
+```
+$ find . -name empl*
+$ find . -name *dump
+```
+
+
 **프로젝트 트리 구조**
 
 ```text
@@ -21,9 +55,28 @@ my-db-project/
 ├── compose.yaml        # 전체 서비스 오케스트레이션 설정
 └── db/
     └── employees.sql   # 초기 데이터 주입용 SQL 파일
+#testdb를 db로 바꾸거나 카피해두면 됨
 
 ```
+한번에 만들기!
+```
+mkdir -p ~/sej/silsoup/0128wed/flask-db-sql && cd ~/sej/silsoup/0128wed/flask-db-sql
+touch app.py requirements.txt Dockerfile compose.yaml init.sql
+```
+지니결과
+```
+master@master01:~/sej/silsoup/0128wed/flask-db-sql$ ls
+app.py  compose.yaml  Dockerfile  init.sql  requirements.txt
+master@master01:~/sej/silsoup/0128wed/flask-db-sql$ tree
+.
+├── app.py
+├── compose.yaml
+├── Dockerfile
+├── init.sql
+└── requirements.txt
 
+1 directory, 5 files
+```
 ---
 
 ### 2. 파일별 상세 내용 및 주석
@@ -171,6 +224,7 @@ services:
       # 초기 SQL 파일을 컨테이너 내 예약된 경로에 마운트 (자동 주입)
       #스키마(db구조:테이블선언,테이블 안의 컬럼 정의, 데이터타입 정의, 덤프파일을 테이블에 넣어라)부터 덤프파일까지 db를 만듦
       #./db/employees.sql 이게 어딨는지 콜론 찍고 물어보는 거
+      #docker-entrypoint-initdb.d 예약된 디렉토리 명이라서 그대로
       - ./db/employees.sql:/docker-entrypoint-initdb.d/employees.sql
       - mysql_data:/var/lib/mysql
     healthcheck:
