--- a/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /020.플라스크+DB+SQL.md
+++ b/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /020.플라스크+DB+SQL.md
@@ -44,6 +44,19 @@ $ find . -name empl*
 $ find . -name *dump
 ```
 
+지니결과
+```
+master@master01:~/sej/silsoup/0128wed/my-db-project$ cd ~
+master@master01:~$ find . -iname 'empl*'
+./sej/silsoup/0128wed/my-db-project/db/employees.sql
+./before0121/db_back/employees_backup.sql
+./imsi/dbbackup/employees.sql
+./imsi/dbbackup/employees_partitioned.sql
+./imsi/dbbackup/employees_partitioned_5.1.sql
+./imsi/dbbackup/images/employees.png
+./imsi/dbbackup/images/employees.gif
+./imsi/dbbackup/images/employees.jpg
+```
 
 **프로젝트 트리 구조**
 
