--- a/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /020.플라스크+DB+SQL.md
+++ b/book/2026.01/01.28.wed/04.PrivateCloudInfra/08.도커 컴포즈 /020.플라스크+DB+SQL.md
@@ -267,6 +267,8 @@ volumes:
 
 실행 중인 서비스와 리소스의 상태를 점검합니다. (`docker compose up -d` 실행 후)
 
+<img width="940" height="1048" alt="image" src="https://github.com/user-attachments/assets/9ca52e1c-6a42-4cff-8afe-974596e733af" />
+
 **① 서비스 상태 확인 (Compose)**
 
 ```bash
