--- a/book/2026.01/01.28.wed/04.PrivateCloudInfra/01.도커및쿠버네티스설치 /021.앤서블로 도커와 쿠버네티스설치.md
+++ b/book/2026.01/01.28.wed/04.PrivateCloudInfra/01.도커및쿠버네티스설치 /021.앤서블로 도커와 쿠버네티스설치.md
@@ -7,8 +7,38 @@ shoule change as master and set password:1234
 
 자동화 전문가의 관점에서, **Ansible Playbook**을 이용한 Docker와 Kubernetes(K8s) 설치는 인프라를 일관되고 반복 가능하며 확장성 있게 구축하는 **가장 표준적인 방법**입니다.
 
-Docker 설치는 비교적 간단하지만, K8s 클러스터 구축은 \*\*`kubeadm`\*\*을 기반으로 복잡한 선행 조건과 마스터/워커 노드별 작업을 요구합니다. 이 모든 과정을 하나의 Playbook 세트로 자동화하는 것이 핵심입니다.
+Docker 설치는 비교적 간단하지만, K8s 클러스터 구축은 \*\*`kubeadm`\*\*을 기반으로 복잡한 선행 조건과 마스터/워커 노드별 작업을 요구합니다. 이 모든 과정을 하나의 Playbook 세트로 자동화하는 것이 핵심입니다.         
+ 
+0. 프로젝트 디렉토리 구조
+ansible-devops-project/
+├── inventory/
+│   └── hosts.ini            # 대상 Windows 호스트 PC 리스트
+├── vars/
+│   └── main.yml             # 설치 파일 버전, 경로 및 계정 정보
+└── site.yml                 # 전체 공정 통합 플레이북
 
+지니로그
+```
+#오늘자 실습 디렉토리로 이동
+master@master01:~$ cd ~/sej/silsoup/0128wed
+master@master01:~/sej/silsoup/0128wed$ pwd
+/home/master/sej/silsoup/0128wed
+
+# 프로젝트 디렉토리 구조 생성 시작
+master@master01:~/sej/silsoup/0128wed$ mkdir k8s
+master@master01:~/sej/silsoup/0128wed$ cd k8s
+master@master01:~/sej/silsoup/0128wed/k8s$ mkdir inventory vars
+master@master01:~/sej/silsoup/0128wed/k8s$ touch inventory/hosts.ini
+master@master01:~/sej/silsoup/0128wed/k8s$ tree
+.
+├── inventory
+│   └── hosts.ini
+└── vars
+
+3 directories, 1 file
+master@master01:~/sej/silsoup/0128wed/k8s$ 
+
+```
 ### 1\. Ansible 환경 및 사전 준비 사항
 
 Docker와 K8s 설치를 자동화하기 전에 다음 사항이 전제되어야 합니다.
@@ -21,15 +51,19 @@ Docker와 K8s 설치를 자동화하기 전에 다음 사항이 전제되어야 
 <!-- end list -->
 
 ```ini
-[master]
-k8s-master ansible_host=192.168.1.10
+#마스터 스킵
+#[master]
+#k8s-master ansible_host=192.168.1.10
 
 [worker]
-k8s-worker1 ansible_host=192.168.1.11
-k8s-worker2 ansible_host=192.168.1.12
+#워커로 사용 할 것
+worker1 ansible_host=192.168.115.1
+worker2 ansible_host=192.168.115.2
+#k8s-worker1 ansible_host=192.168.1.11
+#k8s-worker2 ansible_host=192.168.1.12
 
 [all:vars]
-ansible_user=ubuntu 
+ansible_user=master #우분투는 아마존 들어 갈 때 쓰던 거
 ansible_become=yes # sudo 권한 사용
 ```
 
