Update 021.앤서블로 도커와 쿠버네티스설치.md

--- a/book/2026.01/01.28.wed/04.PrivateCloudInfra/01.도커및쿠버네티스설치 /021.앤서블로 도커와 쿠버네티스설치.md
+++ b/book/2026.01/01.28.wed/04.PrivateCloudInfra/01.도커및쿠버네티스설치 /021.앤서블로 도커와 쿠버네티스설치.md
@@ -1,5 +1,10 @@
+### 코드 수정 많았음 확인필요
+
+<수정 전>
 https://github.com/putto4u/04.PrivateCloudInfra/blob/main/01.%EB%8F%84%EC%BB%A4%EB%B0%8F%EC%BF%A0%EB%B2%84%EB%84%A4%ED%8B%B0%EC%8A%A4%EC%84%A4%EC%B9%98/020.%EC%95%A4%EC%84%9C%EB%B8%94%EB%A1%9C%20%EB%8F%84%EC%BB%A4%EC%99%80%20k8s%EB%A7%88%EC%8A%A4%ED%84%B0%EC%84%A4%EC%B9%98.md
 
+<수정 후>
+https://github.com/putto4u/04.PrivateCloudInfra/blob/main/01.%EB%8F%84%EC%BB%A4%EB%B0%8F%EC%BF%A0%EB%B2%84%EB%84%A4%ED%8B%B0%EC%8A%A4%EC%84%A4%EC%B9%98/021.%EC%95%A4%EC%84%9C%EB%B8%94%EB%A1%9C%20%EB%8F%84%EC%BB%A4%EC%99%80%20%EC%BF%A0%EB%B2%84%EB%84%A4%ED%8B%B0%EC%8A%A4%EC%84%A4%EC%B9%98.md.md
 
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/4b371cb8-408d-4654-ae28-e08ec8d46b2d" />
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/e76528ab-814e-412b-8480-c2dd862f8df2" />
